--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
-}
+/* Sidebar */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-content {
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
   display: flex;
+  padding-top: 2.5rem;
   flex-direction: column;
+  height: 100vh;
+  background: #312e81;
+  min-width: 220px;
+}
+
+.nav-link {
+  display: flex;
+  padding: 20px;
+  gap: 1rem;
+}
+
+.lower-item {
+  display: flex;
+  padding: 20px;
+  gap: 1rem;
+}
+
+
+
+.sidebar-content {
+  display: flex;
+  margin-top: 4rem;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+/* SearchBar */
+
+.main-searchBar {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 90%;
 }
 
-.App-link {
-  color: #61dafb;
+.input-box {
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  background-color: #ffffff;
+  align-items: center;
+  width: 100%;
+  height: 3rem;
+  border-radius: 1.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-logo {
+  display: grid;
+  place-items: center;
+  width: 3rem;
+  height: 100%;
+  color: #525252;
 }
+
+.input-box input {
+  padding-right: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  width: 100%;
+  height: 100%;
+  outline: 0;
+  color: #373737;
+}
+
+.header-btn {
+  display: flex;
+  margin-left: 2rem;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 1.5rem;
+  height: fit-content;
+}
+
+.bell-icon {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  color: #ffffff;
+  border-radius: 9999px;
+  background: #312e81;
+}
+
+/* Buttons */
+
+.blue-buttons {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: #ffffff;
+  border-radius: 1.5rem;
+  background: #312e81;
+}
+
+/* Dashboard */
+
+.dashboard-content {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+}
+
+/* .dash-size {
+  position: fixed;
+  right: 20px;
+  height: 100vh;
+  border-top-left-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  background: #e3f0f6;
+  width: calc(100vw-195px);
+} */
